--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,11 @@
     padding: 10px;
     font-size: 16px;
 }
+.navbar-nav>li>a:hover,
+.navbar-nav>li>a.active{
+text-decoration:5px underline #b4233c;
+ text-underline-offset: 10px;
+}
 /* booknow button */
 .button{
     text-decoration: none;
