--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,7 @@
     color: #b4233c;
     padding: 10px;
     font-size: 16px;
+ margin:10px;
 }
 .navbar-nav>li>a:hover,
 .navbar-nav>li>a.active{
